--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: my_app
+name: huutu_app
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_pdfview: ^1.3.2
   path_provider: ^2.1.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
