--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_pdfview: ^1.3.2
   path_provider: ^2.1.0
   url_launcher: ^6.1.11
+  open_file: ^3.3.2
+  dio: ^5.3.3
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
