--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -49,5 +49,9 @@
       <action android:name="android.intent.action.SENDTO" />
       <data android:scheme="smsto" />
     </intent>
+    <intent>
+      <action android:name="android.intent.action.SENDTO" />
+      <data android:scheme="mailto" />
+    </intent>
   </queries>
 </manifest>
