--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dio: ^5.3.3
   permission_handler: ^11.0.1
   flutter_email_sender: ^6.0.2
+  printing: ^5.9.3
 
 dev_dependencies:
   flutter_test:
